oauth-proxy-custom-authz/manifests-common/podinfo3.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    env: dev
  name: podinfo3
  namespace: dev
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: podinfo3
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    env: dev
    instance: webapp
  name: podinfo3
  namespace: dev
spec:
  minReadySeconds: 3
  progressDeadlineSeconds: 60
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: podinfo3
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io/port: "9797"
        prometheus.io/scrape: "true"
      labels:
        app: podinfo3
    spec:
      containers:
      - command:
        - ./podinfo
        - --port=9898
        - --port-metrics=9797
        - --level=info
        image: ghcr.io/stefanprodan/podinfo:6.0.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - podcli
            - check
            - http
            - localhost:9898/healthz
          initialDelaySeconds: 5
          timeoutSeconds: 5
        name: podinfo3
        ports:
        - containerPort: 9898
          name: http
          protocol: TCP
        - containerPort: 9797
          name: http-metrics
          protocol: TCP
        - containerPort: 9999
          name: grpc
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - podcli
            - check
            - http
            - localhost:9898/readyz
          initialDelaySeconds: 5
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 1000m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 32Mi
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo3
  namespace: dev
spec:
  hosts:
  - "podinfo3.127.0.0.1.nip.io"
  gateways:
  - apps
  http:
  - route:
    - destination:
        host: podinfo3
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: podinfo3
  namespace: dev
spec:
  selector:
    matchLabels:
      app: podinfo3
  action: "ALLOW"
  rules:
  - from:
    - source:
        requestPrincipals: ["http://dex.127.0.0.1.nip.io/*"]  
    when:
    - key: request.auth.claims[email]
      values: ["admin@example.com"]
    #- key: request.auth.claims[groups]
    #  values: ["group1"]
---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: podinfo3
  namespace: dev
spec:
  selector:
    matchLabels:
      app: podinfo3
  jwtRules:
  - issuer: "http://dex.127.0.0.1.nip.io"
    jwksUri: http://dex.dex/keys
    audiences:
      - oauth2-proxy
